# genai-mcp-server

./: .gitignore  README.md  pyproject.toml
genai_mcp_advanced/: analytics.py  charts.py  http_server.py  insights.py  prometheus.py  server.py  tools.py
src/genai_mcp/: __init__.py  analytics.py  http_server.py  insights.py  prometheus.py  server.py  tools.py
tests/: __init__.py  test_advanced.py
