[project]
name = "genai-mcp-server-advanced"
version = "2.0.0"
description = "Advanced MCP Server for GenAI Observability with anomaly detection, trend analysis, and intelligent insights"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["mcp", "genai", "llm", "observability", "prometheus", "grafana", "fastmcp", "anomaly-detection", "ml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "pydantic>=2.0.0",
    "cachetools>=5.3.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.4.0",
    "statsmodels>=0.14.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]
all = [
    "genai-mcp-server-advanced[ml,dev]",
]

[project.scripts]
genai-mcp-advanced = "genai_mcp_advanced.server:main"
genai-mcp-http-advanced = "genai_mcp_advanced.http_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/genai_mcp_advanced"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
