[project]
name = "genai-mcp-server-advanced"
version = "2.0.0"
description = "Advanced MCP Server for GenAI Observability"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "cachetools>=5.3.0",
]

[project.scripts]
genai-mcp-advanced = "genai_mcp_advanced.server:main"
genai-mcp-http-advanced = "genai_mcp_advanced.http_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["genai_mcp_advanced"]
